# news-crawler-app

./: .gitignore  App.vue  LogisticsMap  Main.css
.github/workflows/: logistics-news-agent.yml
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: main.py  schemas.py
backend/app/services/: crawler_service.py  export_service.py  mail_service.py  summary_service.py
backend/data/: all_20260308_031221.json  all_20260308_032122.json  all_20260308_153235.json  all_20260309_001601.json  busanpa_20260308_023817.json  crawled_news_20260310_080615.json  crawled_news_20260311_080826.json  iata_20260308_041856.json  poc_shipping_risk_candidates.csv
backend/news_crawler/: crawler_demo_cargonews.py  crawler_demo_iata.py  crawler_demo_kita.py  crawler_demo_kotra.py  crawler_demo_oceanpress.py  crawler_demo_sea.py  crawler_demo_shippingnews.py  pyproject.toml
data/: SCM_물류_브리핑.xlsx  freight_indices.json
data/2026/04/: all_news.json  freight_latest.json  raw_crawled.json  raw_search.json  summary.json
data/2026/05/: all_news.json  freight_latest.json  raw_crawled.json  (+2 more)
frontend/src/: App.jsx  index.css
news_crawler/: .python-version  CRAWLER_README.md  crawler_demo_busanpa.py  crawler_demo_cello.py  crawler_demo_flexport.py  crawler_demo_ksg.py  crawler_demo_surff.py  crawler_demo_ulogistics.py
pipeline/: crawl_freight_indices.py  crawler_scfi_kcci.py  freight_formatter.py  generate_briefing_excel.py  merge_news.py  run_crawlers.py  search_news.py  send_email.py  send_telegram.py  summarize_news.py
sample_data/: edge_bing_query_extractor.py  hbl  spl
(+15 files in other folders)
